<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/moreDetailsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="16dp"
        android:text="@string/moreDetailLabel"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="216dp"
        android:layout_height="222dp"
        android:layout_marginBottom="44dp"
        app:cpb_background_progressbar_color="#b6bbd8"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="#3f51b5"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPaySlip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/payslipMoreDetailsButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/next_button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/selectedPayslipMthYr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="January 2022"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:text="@string/recentLabel"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPaySlip"
        android:layout_width="395dp"
        android:layout_height="241dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="1dp"
        android:background="#FAF9F9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recentLabel"
        tools:listitem="@layout/activity_payslipitem" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payslipDownloadConsoButton"
        android:layout_width="211dp"
        android:layout_height="75dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="16dp"

        android:background="#5D5FEF"
        android:paddingHorizontal="45dp"
        android:text="@string/payslipConsolidatedHeader"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payslipListButton"
        android:layout_width="163dp"
        android:layout_height="76dp"
        android:layout_marginBottom="16dp"
        android:background="#5D5FEF"
        android:paddingHorizontal="45dp"
        android:text="@string/payslipViewAll"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>