...
                android:text="TextView"
                android:textColor="#000000"
                android:textSize="23sp" />


            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="320dp"
                android:layout_marginTop="20dp"
                android:background="?selectableItemBackgroundBorderless"
                android:scaleType="fitXY"
...
